--- a/server/djangoapp/templates/djangoapp/dealer_details.html
+++ b/server/djangoapp/templates/djangoapp/dealer_details.html
@@ -10,9 +10,53 @@
     <body>
 
     <!--Add a nav bar here -->
-
+    <nav class="navbar navbar-light bg-light">
+        <div class="container-fluid">
+            <div class="navbar-header">
+                  <a class="navbar-brand" href="#">Best Car Deals</a>
+            </div>
+            <ul class="nav navbar-nav navbar-right">
+                <li>
+                    <a class="btn btn-link" href="{% url 'djangoapp:about' %}">Home</a>
+                </li>
+                {% if user.is_authenticated %}
+                    <li>
+                        <a class="btn btn-link" href="#">{{ user.first_name }}({{ user.username }})</a>
+                        <a class="btn btn-link" href="{% url 'djangoapp:logout' %}">Logout</a>
+                    </li>
+                    <li>
+                        <a class="btn btn-link" href="{% url 'djangoapp:add_review' %}">Add Review</a>
+                    </li>
+                    {% else %}
+                    <li>
+                        <form class="form-inline" action="{% url 'djangoapp:login' %}" method="post">
+                            {% csrf_token %}
+                            <div class="input-group">
+                                <input type="text" class="form-control" placeholder="Username" name="username" >
+                                <input type="password" class="form-control" placeholder="Password" name="psw" >
+                                <button class="btn btn-primary" type="submit">Login</button>
+                                <a class="btn btn-link" href="{% url 'djangoapp:registration' %}">Sign Up</a>
+                            </div>
+                        </form>
+                    </li>
+                {% endif %}
+            </ul>
+        </div>
+    </nav>
     <!-- Add reviews as cards -->
-
+    <div class="container-fluid">
+    {% for review in Review_list %}
+        <div class="card">
+            <img class="card-img-left" src="../../../static/media/emoji/{{review.sentiment}}.png" alt="Card image cap">
+            <div class="card-body">
+            <h5 class="card-title">{{review.car_make}} , {{review.car_model}} <br> {{review.car_year}}</h5>
+            <p class="card-text">{{review.review}}</p>
+            </div>
+        </div>
+        </div>
+    {% endfor %}
+    </div>
     </body>
+
 
 </html>
